--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 <div>    
     <div class="blink" id="prova1">
-        <strong><span class="blue">SAEB:</span></strong> Faltam <strong>87</strong> dias letivos
+        <strong><span class="blue">SAEB:</span></strong> Faltam <strong>141</strong> dias
     </div>
 
     <div class="blink" id="prova2">
-        <strong><span class="blue">SARESP:</span></strong> Faltam <strong>97</strong> dias letivos
+        <strong><span class="blue">SARESP:</span></strong> Faltam <strong>156</strong> dias
     </div>
 </div>
 
