--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <h2>Contagem Regressiva Avaliações Externas</h2>
 
 <img src="https://th.bing.com/th/id/R.126183ed9e2b5220f444579b3ef5c943?rik=80%2f1CDwsIZ93%2bw&pid=ImgRaw&r=0" alt="Descrição da imagem" class="imagem"width="70" height="70">
-<div  class="clock" id="clock">
-</div>
+<!--<div  class="clock" id="clock"> </div>-->
 
 
 <!-- Contadores para as provas -->
